--- a/style.css
+++ b/style.css
@@ -12,6 +12,51 @@ body{
     height: 100vh;
 }
 
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 450px;
+    height: 300px;
+    background-color: #eaf4f4;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+#heading{
+    margin-top: 20px;
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 35px;
+}
+
+#weight{
+    width: 300px;
+    height: 30px;
+    border-color: #6b9080;
+    border-radius: 5px;
+}
+
+#height{
+    width: 300px;
+    height: 30px;
+    border-color: #6b9080;
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+#btn{
+    width: 150px;
+    height: 30px;
+    border-radius: 5px;
+    border: none;
+    background-color: #fff;
+    margin-top: 20px;
+    color: black;
+    font-size: 15px;
+}
+
 
 
 
