--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body{
     height: 30px;
     border-color: #6b9080;
     border-radius: 5px;
+    padding-left: 10px;
 }
 
 #height{
@@ -44,6 +45,7 @@ body{
     border-color: #6b9080;
     border-radius: 5px;
     margin-top: 20px;
+    padding-left: 10px;
 }
 
 #btn{
